force-app/main/default/objects/Product__c/fields/CTA__c.field-meta.xml
<CustomField>
    <fullName>CTA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CTA</label>
    <referenceTo>CTA__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Quotation_Products</relationshipName>
    <type>Lookup</type>
</CustomField>