force-app/main/default/objects/Product__c/fields/GST_Percentage__c.field-meta.xml
<CustomField>
    <fullName>GST_Percentage__c</fullName>
    <label>GST Percentage</label>
    <length>10</length>
    <type>Text</type>
</CustomField>