force-app/main/default/objects/Product__c/fields/Product_Discription__c.field-meta.xml
<CustomField>
    <fullName>Product_Discription__c</fullName>
    <label>Product Discription</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>