force-app/main/default/objects/Product__c/fields/Unit_Price_For_1_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_For_1_Quantity__c</fullName>
    <formula>Unit_Price__c /  VALUE(Quantity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price For 1 Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>